--- a/html/index.html
+++ b/html/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="../Css/fonts.css">
     <link rel="stylesheet" href="../Css/style.css">
     <title>Netflix</title>
@@ -16,7 +17,7 @@
                     <h3 class="nt_title">Friday July 8th</h3>
                   </div>
                   <div class="header_avatar">
-                    <img class="avatar_img" src="../Icons/glass.svg" alt="glass">
+                  <span class=" avatar_img"><i class="fa-solid fa-magnifying-glass"></i></span>
                     <img class="avatar_second_img" src="../Icons/avatar.png" alt="avatar">
                   </div>
             </div>
@@ -37,18 +38,25 @@
               <div class="dcr">In 1980s Indiana, a group of young friends witness supernatural forces and<br> secret government exploits. As they search for answers, the children<br> unravel a series of extraordinary mysteries.</div>
             </div>
             <div class="assessment">
-              <img src="../Icons/star.svg" alt="assessment">
+              <span class="star"><i class="fa-solid fa-star"></i></span>
+              <span class="star"><i class="fa-solid fa-star"></i></span>
+              <span class="star"><i class="fa-solid fa-star"></i></span>
+              <span class="star_ful"><i class="fa-regular fa-star"></i></span>
+              <span class="star_ful"><i class="fa-regular fa-star"></i></span>
             </div>
             <div class="buttons">
               <a href="#"><button class="btn">STREAM NOW</button></a>
-              <a href="#"><div class="btn_text">ALL EPISODES</div></a>
+              <a class="dcr" href="#"><div class="btn_text">ALL EPISODES</div></a>
             </div>
             <div class="popular">
               <div class="popular_text">POPULAR THIS WEEK</div>
               <div class="popular_move">
-                <a href="#"><img class="arrow1" src="../Icons/Group 2.png" alt="#"></a>
-                <a href="#"><img class="arrow2" src="../Icons/Group 1.png" alt="#"></a>
+                <span class="arrok"><i " class="fa-solid fa-angle-left"></i></span>
+                <span class="arrok"><i  class="fa-solid fa-angle-right"></i></span>
               </div>
+            </div>
+            <div class="age">
+              <div class="age_text">16+</div>
             </div>
             <div class="recomend">
               <img class="f1" src="../img/film1.png" alt="#">
@@ -57,7 +65,7 @@
               <img class="f4" src="../img/film4.png" alt="#">
               <img class="f5" src="../img/film5.png" alt="#">
             </div>
-          
+           
         </div>
     </section>
 </body>
