--- a/html/index.html
+++ b/html/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="../Css/fonts.css">
     <link rel="stylesheet" href="../Css/style.css">
+    <link rel="stylesheet" href="../Css/reset.css">
     <title>Netflix</title>
 </head>
 <body>
